--- a/apple-pie/styles/style.css
+++ b/apple-pie/styles/style.css
@@ -1,24 +1,75 @@
-/* CSS RESET - do not remove */
-/* Reset default browser styles and provide a consistent starting point */
-html {
-  box-sizing: border-box;
-  font-size: 16px;
-}
 
-*, *:before, *:after {
-  box-sizing: inherit;
-}
 
 body, h1, h2, h3, h4, h5, h6, p, ol, ul {
-  margin: 0;
+
   padding: 0;
   font-weight: lighter;
 }
 
 /*  Set the font */
 body {
+  display: flex;
   font-family: "Helvetica", sans-serif;
+  align-content: space-between;
+
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  flex-direction: column;
+
 }
 
-/* STYLES */
-/* Write your CSS below */
+body >*{
+  margin-bottom: 120px;
+  position: relative;
+  width: 70%;
+}
+
+
+#BackgroundImage{
+  width: 100%;
+  height: 2000px;
+
+  background-repeat: no-repeat;
+
+  background-size: cover;
+  background-image: url(./../images/apple-pie.jpg);
+
+  display: flex;
+  align-content: center;
+  justify-content: center;
+}
+
+
+
+.Title{
+  margin: auto;
+  color:white;
+  font-size: 200px;
+}
+
+.SubTitle{
+  margin-bottom: 20px;
+  font-size: 60px;
+  font-weight:600;
+}
+
+#Introduction{
+  font-size: 60px;
+}
+
+div{
+  font-size: 55px;
+}
+
+ul, ol{
+  margin-top: 20px;
+}
+.Info{
+  display: flex;
+  justify-content: center;
+}
+
+.Info img{
+  width: 1000px;
+}
